# RedClone

./: .clang-format  .gitignore  CMakeLists.txt
assets/tiles/: landscapeTiles_sheet.lua
docs/: tile_assets.md
src/: lua.hpp  main.cpp
src/core/: Application.cpp  Application.h  CameraController.cpp  CameraController.h  Logger.cpp  Logger.h
src/ecs/: EntityManager.cpp  EntityManager.h
src/engine/assets/: TileAsset.cpp  TileAsset.h  TileAssetLoader.cpp  TileAssetLoader.h  TileConnector.cpp  TileConnector.h
src/engine/camera/: Camera2D.cpp  Camera2D.h
src/engine/input/: IInputObserver.h  InputEvent.h  InputSystem.cpp  InputSystem.h  Key.h  MouseButton.h  SfmlInputAdapter.cpp  SfmlInputAdapter.h
src/engine/math/: Isometric.cpp  Isometric.h  MathTypes.h  Rect.h  Vec2.h
src/engine/rendering/: Color.h  DebugRenderer.cpp  DebugRenderer.h  IRenderer.h  SfmlRenderer.cpp  SfmlRenderer.h
src/engine/window/: IWindow.h  Window.cpp  Window.h
src/gameplay/: ObjFilters.h  SelectionController.cpp  SelectionController.h
src/scripting/: ScriptEngine.cpp  ScriptEngine.h
src/world/: TerrainMesh.cpp  TerrainMesh.h  Tile.h  TileMap.cpp  TileMap.h  TileMapGenerator.cpp  TileMapGenerator.h  TileMapRenderer.cpp  TileMapRenderer.h  World.cpp  World.h
tests/: CMakeLists.txt  Camera2DTests.cpp  CameraControllerTests.cpp  EcsTests.cpp  IsometricTests.cpp  LoggerTests.cpp  ScriptEngineTests.cpp  SelectionControllerTests.cpp  TerrainMeshTests.cpp  TestCommon.h  TestMain.cpp  TileAssetMetadataTests.cpp  TileAssetRegistryTests.cpp  TileAssetTests.cpp  TileConnectorTests.cpp  TileMapTests.cpp  WorldTests.cpp
